@startuml Strategyパターン

package Strategyパターン <<Rectangle>> {
    class Report {
        + Formatter formatter
        + void initialize()
        + void print_output()
    }

    abstract class Formatter {
        + {abstract} void do_format()
    }

    class HTMLFormatter {
        + void do_format()
    }

    class PlainTextFormatter {
        + void do_format()
    }

    class JsonFormatter {
        + void do_format()
    }
}

Report *- Formatter : call >
Formatter <|-- HTMLFormatter : extends
Formatter <|-- PlainTextFormatter : extends
Formatter <|-- JsonFormatter : extends

@enduml

@startuml Strategyパターン_easy

package Strategyパターン <<Rectangle>> {
    class Report {
    }

    abstract class Formatter {
    }

    class HTMLFormatter {
    }

    class PlainTextFormatter {
    }

    class JsonFormatter {
    }
}

Report *- Formatter : call >
Formatter <|-- HTMLFormatter : extends
Formatter <|-- PlainTextFormatter : extends
Formatter <|-- JsonFormatter : extends

@enduml
